Temporarily turn off GitHub Sponsors until accepted

--- a/funding.yml
+++ b/funding.yml
@@ -1,7 +1,7 @@
 # up to 4 GitHub Sponsors-enabled usernames
-github:
-  - pkuczynski
-  - mpapis
+# github:
+#  - pkuczynski
+#  - mpapis
 
 open_collective: rvm
 
